--- a/web-deployment.yaml
+++ b/web-deployment.yaml
@@ -32,12 +32,15 @@ spec:
         app: synergychat-web
     spec:
       containers:
-      - image: docker.io/bootdotdev/synergychat-web:latest
-        imagePullPolicy: Always
-        name: synergychat-web
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
+        - image: docker.io/bootdotdev/synergychat-web:latest
+          imagePullPolicy: Always
+          name: synergychat-web
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          envFrom:
+            - configMapRef:
+                name: synergychat-web-configmap
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -46,18 +49,18 @@ spec:
 status:
   availableReplicas: 3
   conditions:
-  - lastTransitionTime: "2025-08-31T15:36:12Z"
-    lastUpdateTime: "2025-08-31T15:36:18Z"
-    message: ReplicaSet "synergychat-web-f765d99db" has successfully progressed.
-    reason: NewReplicaSetAvailable
-    status: "True"
-    type: Progressing
-  - lastTransitionTime: "2025-08-31T16:04:55Z"
-    lastUpdateTime: "2025-08-31T16:04:55Z"
-    message: Deployment has minimum availability.
-    reason: MinimumReplicasAvailable
-    status: "True"
-    type: Available
+    - lastTransitionTime: "2025-08-31T15:36:12Z"
+      lastUpdateTime: "2025-08-31T15:36:18Z"
+      message: ReplicaSet "synergychat-web-f765d99db" has successfully progressed.
+      reason: NewReplicaSetAvailable
+      status: "True"
+      type: Progressing
+    - lastTransitionTime: "2025-08-31T16:04:55Z"
+      lastUpdateTime: "2025-08-31T16:04:55Z"
+      message: Deployment has minimum availability.
+      reason: MinimumReplicasAvailable
+      status: "True"
+      type: Available
   observedGeneration: 4
   readyReplicas: 3
   replicas: 3
